# LowLevelMiner

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
assets/: CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: camera.h  game_object.h  mesh.h  render_manager.h  render_object.h  shader.h  texture.h
shader/: CMakeLists.txt  embed_shader.cpp
shader/fragment/: default.shader  depth_vis.shader  lit.shader  mix.shader  outline.shader  unlit.shader  yellow.shader
shader/vertex/: default.shader  framebuffer.shader  skybox.shader
src/: camera.cpp  game_object.cpp  main.cpp  mesh.cpp  render_manager.cpp  render_object.cpp  shader.cpp  texture.cpp
